--- a/src/html/template.html
+++ b/src/html/template.html
@@ -6,17 +6,31 @@
   <title>Boardgame Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body class="min-h-screen bg-gray-100 font-sans text-gray-900 flex flex-col relative overflow-hidden">
 
-  <!-- Scatterplot Area - Full screen background -->
   <div id="scatterplot" class="absolute inset-0 z-0 flex items-center justify-center bg-gray-50">
-    <div class="text-gray-400 text-xl md:text-2xl font-medium">
-      (Scatterplot will appear here)
+    <svg id="scatterplot-svg" class="w-full h-full"></svg>
+    <div class="absolute bottom-4 left-4 flex space-x-2 z-20">
+      <button id="reset-zoom" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-3 rounded-full shadow-lg text-sm transition-colors flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+        </svg>
+      </button>
+      <button id="zoom-in" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-3 rounded-full shadow-lg text-sm transition-colors flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+        </svg>
+      </button>
+      <button id="zoom-out" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-3 rounded-full shadow-lg text-sm transition-colors flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12h-15" />
+        </svg>
+      </button>
     </div>
   </div>
 
-  <!-- Control Panel - Top Right -->
   <div id="control-panel" class="panel-container absolute top-4 right-4 z-10 bg-white rounded-xl shadow-lg p-3 w-11/12 max-w-xs md:max-w-sm lg:max-w-md overflow-hidden">
     <div class="flex justify-between items-center mb-2 panel-header">
       <h3 class="text-lg font-semibold text-gray-800">Controls</h3>
@@ -27,7 +41,6 @@
       </button>
     </div>
     <div class="panel-content space-y-2 text-sm">
-      <!-- Games Slider -->
       <div>
         <label for="top-x-slider" class="block font-medium text-gray-700 mb-0.5">Games</label>
         <div class="flex items-center gap-2">
@@ -35,7 +48,6 @@
           <span id="top-x-value" class="font-medium text-gray-900 w-10 text-right">40</span>
         </div>
       </div>
-      <!-- Rating Slider -->
       <div>
         <label for="rating-slider" class="block font-medium text-gray-700 mb-0.5">Rating</label>
         <div class="flex items-center gap-2">
@@ -43,7 +55,6 @@
           <span id="rating-value" class="font-medium text-gray-900 w-10 text-right">0+</span>
         </div>
       </div>
-      <!-- Players Dual Slider -->
       <div>
         <label class="block font-medium text-gray-700 mb-0.5">Players</label>
         <div class="flex items-center gap-2">
@@ -52,16 +63,14 @@
           <span id="player-range-value" class="font-medium text-gray-900 w-16 text-right">1 - 10</span>
         </div>
       </div>
-      <!-- Play time Dual Slider -->
       <div>
         <label class="block font-medium text-gray-700 mb-0.5">Play time (min)</label>
         <div class="flex items-center gap-2">
           <input type="range" id="time-min-slider" min="0" max="600" value="0" step="10" class="w-1/2 h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
           <input type="range" id="time-max-slider" min="0" max="600" value="600" step="10" class="w-1/2 h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
-          <span id="time-range-value" class="font-medium text-gray-900 w-20 text-right">0 - 600 min</span>
+          <span id="time-range-value" class="font-medium text-gray-900 w-20 text-right">0 - 600</span>
         </div>
       </div>
-      <!-- Components Slider -->
       <div>
         <label for="lda-slider" class="block font-medium text-gray-700 mb-0.5">Components</label>
         <div class="flex items-center gap-2">
@@ -69,7 +78,6 @@
           <span id="lda-value" class="font-medium text-gray-900 w-10 text-right">4</span>
         </div>
       </div>
-      <!-- Clusters Slider -->
       <div>
         <label for="k-slider" class="block font-medium text-gray-700 mb-0.5">Clusters</label>
         <div class="flex items-center gap-2">
@@ -77,7 +85,6 @@
           <span id="k-value" class="font-medium text-gray-900 w-10 text-right">4</span>
         </div>
       </div>
-      <!-- Show Recommendations Checkbox -->
       <div class="flex items-center pt-2">
         <input type="checkbox" id="recommendation-toggle" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
         <label for="recommendation-toggle" class="ml-2 block text-sm font-medium text-gray-700">Show Recommendations</label>
@@ -85,7 +92,6 @@
     </div>
   </div>
 
-  <!-- Game List Panel - Bottom Right -->
   <div id="game-list" class="panel-container absolute bottom-4 right-4 z-10 bg-white rounded-xl shadow-lg p-3 w-11/12 max-w-xs md:max-w-sm lg:max-w-md overflow-hidden">
     <div class="flex justify-between items-center mb-2 panel-header">
       <h3 class="text-lg font-semibold text-gray-800">Displayed Games</h3>
@@ -97,12 +103,10 @@
     </div>
     <div class="panel-content">
       <ul id="game-list-items" class="space-y-1 text-gray-700 max-h-48 overflow-y-auto pr-2 text-sm">
-        <!-- Games will be dynamically added here by JavaScript -->
       </ul>
     </div>
   </div>
 
-  <!-- Barchart Panel - Top Left -->
   <div id="barchart" class="panel-container absolute top-4 left-4 z-10 bg-white rounded-xl shadow-lg p-3 w-11/12 max-w-xs md:max-w-sm lg:max-w-md overflow-hidden">
     <div class="flex justify-between items-center mb-2 panel-header">
       <h3 class="text-lg font-semibold text-gray-800">Mechanics Overview</h3>
@@ -118,5 +122,6 @@
       </svg>
     </div>
   </div>
+
 </body>
 </html>
