--- a/src/html/template.html
+++ b/src/html/template.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <div id="control-panel" class="panel-container absolute top-4 right-4 z-10 bg-white rounded-xl shadow-lg p-3 w-11/12 max-w-xs md:max-w-sm lg:max-w-md overflow-hidden">
+  <div id="control-panel" class="panel-container absolute top-4 right-4 z-10 bg-white rounded-xl shadow-lg p-3 w-11/12 max-w-xs md:max-w-xs lg:max-w-sm overflow-hidden">
     <div class="flex justify-between items-center mb-2 panel-header">
       <h3 class="text-lg font-semibold text-gray-800">Controls</h3>
       <button class="panel-toggle text-gray-500 hover:text-gray-700 focus:outline-none transition-colors duration-200 p-1 rounded-full hover:bg-gray-100">
@@ -72,16 +72,9 @@
         </div>
       </div>
       <div>
-        <label for="lda-slider" class="block font-medium text-gray-700 mb-0.5">Components</label>
-        <div class="flex items-center gap-2">
-          <input type="range" id="lda-slider" min="2" max="10" value="4" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
-          <span id="lda-value" class="font-medium text-gray-900 w-10 text-right">4</span>
-        </div>
-      </div>
-      <div>
         <label for="k-slider" class="block font-medium text-gray-700 mb-0.5">Clusters</label>
         <div class="flex items-center gap-2">
-          <input type="range" id="k-slider" min="2" max="10" value="4" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
+          <input type="range" id="k-slider" min="2" max="20" value="4" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
           <span id="k-value" class="font-medium text-gray-900 w-10 text-right">4</span>
         </div>
       </div>
@@ -107,7 +100,7 @@
     </div>
   </div>
 
-  <div id="barchart" class="panel-container absolute top-4 left-4 z-10 bg-white rounded-xl shadow-lg p-3 w-11/12 max-w-xs md:max-w-sm lg:max-w-md overflow-hidden">
+  <div id="barchart" class="panel-container absolute top-4 left-4 z-10 bg-white rounded-xl shadow-lg p-3 w-11/12 max-w-xs md:max-w-xs lg:max-w-sm overflow-hidden">
     <div class="flex justify-between items-center mb-2 panel-header">
       <h3 class="text-lg font-semibold text-gray-800">Mechanics Overview</h3>
       <button class="panel-toggle text-gray-500 hover:text-gray-700 focus:outline-none transition-colors duration-200 p-1 rounded-full hover:bg-gray-100">
